<resources>
    <string name="app_name">My Application</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="profile">Profile</string>
    <string name="search_pok_mon">Search Pokémon…</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="abilities_will_show_here">Abilities will show here</string>
</resources>